# engine

./: .gitignore  CMakeLists.txt  post-build.bat
assets/materials/: test_material.emt
assets/shaders/: MaterialShader.frag.glsl  MaterialShader.frag.spv  MaterialShader.vert.glsl  MaterialShader.vert.spv
engine/: CMakeLists.txt
engine/src/: defines.h  entry.h  game_types.h
engine/src/containers/: darray.c  darray.h  hashtable.c  hashtable.h
engine/src/core/: application.c  application.h  clock.c  clock.h  estring.c  estring.h  event.c  event.h  file.c  file.h  input.c  input.h  logger.c  logger.h  platform.c  platform.h  random.h
engine/src/math/: emath.c  emath.h  math_types.h
engine/src/memory/: ememory.c  ememory.h  linear_allocator.c  linear_allocator.h
engine/src/renderer/: camera.c  camera.h  renderer_backend.c  renderer_frontend.c  renderer_frontend.h  renderer_types.inl
engine/src/renderer/vulkan/: vulkan_buffer.c  vulkan_buffer.h  vulkan_command_buffer.c  vulkan_command_buffer.h  vulkan_device.c  vulkan_framebuffer.c  vulkan_framebuffer.h  vulkan_image.c  vulkan_image.h  vulkan_instance.c  vulkan_material_shader.c  vulkan_material_shader.h  vulkan_object_shader.c  vulkan_object_shader.h  vulkan_pipeline.c  vulkan_pipeline.h  vulkan_renderer_backend.c  vulkan_renderer_backend.h  vulkan_swapchain.c  vulkan_types.inl  vulkan_utils.h
engine/src/resources/: resource_types.h
engine/src/systems/: geometry_system.c  geometry_system.h  material_system.c  material_system.h  texture_system.c
game/: CMakeLists.txt
game/src/: entry.c  game.c  game.h
src/: defines.h
src/core/: application.c  entry.c  (+10 more)
(+37 files in other folders)
